# smlComObject

./: CMakeLists.txt  readme.md  smlComObject.000.rar  smlComObject.001.rar  smlComObject.002.ver001.rar
smlComObject/: CMakeLists.txt  add-ro.cmd  remove-ro.cmd  smComRegistry.cpp  smComRegistry.h  smCommDefs.h  smGUIDHelper.cpp  smGUIDHelper.h  smIObjectBase.cpp  smIObjectBase.h  smIObjectBaseHelpers.h  smIUnknown.cpp  smIUnknown.h  smMetaType.cpp  smMetaType.h  smMetaTypeHelpers.h  smModuleHelper.cpp  smModuleHelper.h  smModuleHelper.test.cpp  smObjectBase.h  smObjectBase.ver001.h  smObjectBase.ver002.h  smObjectBasePrivate.cpp  smObjectBasePrivate.h  smObjectInstanceCounter.cpp  smObjectInstanceCounter.h  smPtrHelpers.cpp  smPtrHelpers.h  smQIHelper.h  xx-test-itf.h  xxx-test-full.cpp  xxx-test.cpp  yyy-test-misc.cpp  zzz-example-class.cpp  zzz-example-interface.h  zzz-example-test.cpp  zzz-smlComObject.cpp  zzz-test-aggragation-class.cpp  zzz-test-aggragation.cpp  zzz-zzz-smlComObject.cpp
